event football set pass or run score player

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -611,12 +611,14 @@
                           [control]="control"
                           [placeholder]="'score result'"
                           [stringList]="filterScoreResultsByType(getEventPlayType(eventsArray, i))"
+                          (itemSelected)="handleScoreResultChange(eventsArray, i, getEventScoreResult(eventsArray, i), getEventPlayType(eventsArray, i), getEventReceiverPlayer(eventsArray,i), getEventRunPlayer(eventsArray, i))"
                         ></app-select-list-of-strings>
                       } @else {
                         <app-search-list-of-strings
                           [control]="control"
                           [placeholder]="'score result'"
                           [stringList]="filterScoreResultsByType(getEventPlayType(eventsArray, i))"
+                          (itemSelected)="handleScoreResultChange(eventsArray, i, getEventScoreResult(eventsArray, i), getEventPlayType(eventsArray, i), getEventReceiverPlayer(eventsArray,i), getEventRunPlayer(eventsArray, i))"
                         ></app-search-list-of-strings>
                       }
                     </div>
