football event qb rating

--- a/src/app/shared/ui/events/football-stats/simple-football-qb-stats/simple-football-qb-stats.component.html
+++ b/src/app/shared/ui/events/football-stats/simple-football-qb-stats/simple-football-qb-stats.component.html
@@ -25,7 +25,8 @@
       }
       RUN TD: {{ qb.qb_stats?.run_td }},
       INT: {{ qb.qb_stats?.interception }},
-      FUMBLE: {{ qb.qb_stats?.fumble }})
+      FUMBLE: {{ qb.qb_stats?.fumble }},
+      QB RATING: {{ qb.qb_stats?.qb_rating }})
     </p>
   }
 }
