--- a/src/app/shared/ui/events/football-stats/simple-football-qb-stats/simple-football-qb-stats.component.html
+++ b/src/app/shared/ui/events/football-stats/simple-football-qb-stats/simple-football-qb-stats.component.html
@@ -8,21 +8,23 @@
       <br>
       (PASS ATT: {{ qb.qb_stats?.passes }}/{{ qb.qb_stats?.passes_completed }},
       PASS YDS: {{ qb.qb_stats?.pass_yards }},
-      PASS%: @if (qb.qb_stats?.passes_completed && qb.qb_stats?.passes) {
-      {{ qb.qb_stats!.passes_completed / qb.qb_stats!.passes * 100 | number:'1.0-1' }},
-    } @else {
-      0,
-    }
+      PASS%: {{ qb.qb_stats?.pass_avr + '%,' }}
+      <!--      PASS%: @if (qb.qb_stats?.passes_completed && qb.qb_stats?.passes) {-->
+      <!--      {{ qb.qb_stats!.passes_completed / qb.qb_stats!.passes * 100 | number:'1.0-1' }},-->
+      <!--    } @else {-->
+      <!--      0,-->
+      <!--    }-->
       PASS TD THROWN: {{ qb.qb_stats?.pass_td }},
       <br>
       RUN ATT: {{ qb.qb_stats?.run_attempts }},
       RUN YDS: {{ qb.qb_stats?.run_yards }},
-      AVG RUN YDS:
-      @if (qb.qb_stats?.run_attempts && qb.qb_stats?.run_yards) {
-        {{ qb.qb_stats!.run_yards / qb.qb_stats!.run_attempts | number:'1.0-1' }},
-      } @else {
-        0,
-      }
+      AVG RUN YDS: {{ qb.qb_stats?.run_avr }},
+      <!--      AVG RUN YDS:-->
+      <!--      @if (qb.qb_stats?.run_attempts && qb.qb_stats?.run_yards) {-->
+      <!--        {{ qb.qb_stats!.run_yards / qb.qb_stats!.run_attempts | number:'1.0-1' }},-->
+      <!--      } @else {-->
+      <!--        0,-->
+      <!--      }-->
       RUN TD: {{ qb.qb_stats?.run_td }},
       INT: {{ qb.qb_stats?.interception }},
       FUMBLE: {{ qb.qb_stats?.fumble }},
