--- a/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.html
@@ -41,6 +41,33 @@
       ></app-admin-down-button>
     </div>
 
+    <div style="display: grid; grid-column: span 2; grid-template-columns: auto auto auto; grid-gap: 10px">
+      <div class="roster-forms-btns">
+        <app-admin-down-button
+          [down]="data.scoreboard_data?.is_home_match_team_lower ? 'Hide' : 'Show'"
+          [distance]="'HOME TEAM STATS'"
+          (click)="toggleHomeTeamFootballLowerVisibility(data.scoreboard_data!)"
+        ></app-admin-down-button>
+      </div>
+
+      <div class="roster-forms-btns">
+        <app-admin-down-button
+          [down]="'Toggle'"
+          [distance]="'BOTH TEAMS STATS'"
+          (click)="toggleBothTeamFootballLowerVisibility(data.scoreboard_data!)"
+        ></app-admin-down-button>
+      </div>
+
+      <div class="roster-forms-btns">
+        <app-admin-down-button
+          [down]="data.scoreboard_data?.is_away_match_team_lower ? 'Hide' : 'Show'"
+          [distance]="'AWAY TEAM STATS'"
+          (click)="toggleAwayTeamFootballLowerVisibility(data.scoreboard_data!)"
+        ></app-admin-down-button>
+      </div>
+    </div>
+
+
     <div
       class="lower-btn-show"
       [style.grid-template-columns]="data.scoreboard_data?.is_match_player_lower ? '20% 80%' : '1fr'"
