--- a/src/app/shared/scoreboards/team-match-lower-football-stats-display-flat/team-match-lower-football-stats-display-flat.component.html
+++ b/src/app/shared/scoreboards/team-match-lower-football-stats-display-flat/team-match-lower-football-stats-display-flat.component.html
@@ -27,15 +27,15 @@
       <span>Ярды за попытку: {{ footballTeamWithStats.match_stats?.avg_yards_per_att }} </span>
       <span>Ярды на флаге: {{ footballTeamWithStats.match_stats?.flag_yards }}</span>
       <span>
-      Набор 1го дауна: {{ footballTeamWithStats.match_stats?.first_down_gained }}
+      Набор 1-го дауна: {{ footballTeamWithStats.match_stats?.first_down_gained }}
     </span>
       <span>
-      Реализация 3го дауна: {{
+      Реализация 3-го дауна: {{
           footballTeamWithStats.match_stats?.third_down_conversions
         }} / {{ footballTeamWithStats.match_stats?.third_down_attempts }}
     </span>
       <span>
-      Реализация 4го дауна: {{
+      Реализация 4-го дауна: {{
           footballTeamWithStats.match_stats?.fourth_down_conversions
         }} / {{ footballTeamWithStats.match_stats?.fourth_down_attempts }}
     </span>
