football event qb lower with stats integration plus refactor

--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -61,6 +61,7 @@
             [playClock]="playclock.playclock!"
             [gameClock]="gameclock.gameclock!"
             [playerLowerId]="data.scoreboard_data?.player_match_lower_id"
+            [footballQbLowerId]="data.scoreboard_data?.football_qb_full_stats_match_lower_id"
           ></app-scoreboard-display-flat>
         </div>
         <div class="sponsorLine-area">
