--- a/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.less
@@ -17,6 +17,11 @@
   grid-column: span 2;
 }
 
+.stats-span {
+  grid-column: span 2;
+  text-align: center
+}
+
 
 @media screen and (max-width: 720px) {
   .roster-forms {
