--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -124,6 +124,10 @@
   bottom: 75px;
 }
 
+.full-size-lower-offset {
+  transform: translateX(455px);
+}
+
 .team_a-detail {
   background-color: orangered;
 }
