--- a/src/app/shared/ui/buttons/admin-down-button/admin-down-button.component.html
+++ b/src/app/shared/ui/buttons/admin-down-button/admin-down-button.component.html
@@ -1,7 +1,7 @@
 <button
   appearance="down-admin"
   tuiButton
-  size="m"
+  [size]="size"
   type="button"
   style="width: 100%"
   [disabled]="disabled"
