football display toggle button with on-air blink

--- a/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.less
@@ -9,9 +9,10 @@
   justify-content: stretch;
 }
 
-.lower-btn-show {
+.toggle-on-air-main {
   display: grid;
-  grid-template-columns: 1fr 80%;
+  grid-template-columns: 100%;
+  //grid-template-columns: 1fr 80%;
   justify-content: center;
   grid-gap: 10px;
   grid-column: span 2;
