--- a/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.html
@@ -11,53 +11,94 @@
   >
     <span class="stats-span">TEAMS ROSTERS</span>
     <div class="roster-forms-btns">
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_team_a_start_offense ? 'Hide' : 'Show'"
-        [distance]="'HOME OFFENSE'"
-        (click)="toggleShowHomeOffenseRosterVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
+      <div class="toggle-on-air-main">
+        <app-on-air-toggle
+          [isOnAir]="data.scoreboard_data?.is_team_a_start_offense || false"
+          [buttonLabel]="'HOME OFFENSE'"
+          (toggle)="toggleShowHomeOffenseRosterVisibility(data.scoreboard_data!)"
+        ></app-on-air-toggle>
+      </div>
+      <!--      <app-admin-down-button-->
+      <!--        [down]="data.scoreboard_data?.is_team_a_start_offense ? 'Hide' : 'Show'"-->
+      <!--        [distance]="'HOME OFFENSE'"-->
+      <!--        (click)="toggleShowHomeOffenseRosterVisibility(data.scoreboard_data!)"-->
+      <!--      ></app-admin-down-button>-->
     </div>
 
     <div class="roster-forms-btns">
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_team_b_start_offense ? 'Hide' : 'Show'"
-        [distance]="'AWAY OFFENSE'"
-        (click)="toggleShowAwayOffenseRosterVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
+      <div class="toggle-on-air-main">
+        <app-on-air-toggle
+          [isOnAir]="data.scoreboard_data?.is_team_b_start_offense || false"
+          [buttonLabel]="'AWAY OFFENSE'"
+          (toggle)="toggleShowAwayOffenseRosterVisibility(data.scoreboard_data!)"
+        ></app-on-air-toggle>
+      </div>
+      <!--      <app-admin-down-button-->
+      <!--        [down]="data.scoreboard_data?.is_team_b_start_offense ? 'Hide' : 'Show'"-->
+      <!--        [distance]="'AWAY OFFENSE'"-->
+      <!--        (click)="toggleShowAwayOffenseRosterVisibility(data.scoreboard_data!)"-->
+      <!--      ></app-admin-down-button>-->
     </div>
 
     <div class="roster-forms-btns">
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_team_a_start_defense ? 'Hide' : 'Show'"
-        [distance]="'HOME DEFENSE'"
-        (click)="toggleShowHomeDefenseRosterVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
+      <div class="toggle-on-air-main">
+        <app-on-air-toggle
+          [isOnAir]="data.scoreboard_data?.is_team_a_start_defense || false"
+          [buttonLabel]="'HOME DEFENSE'"
+          (toggle)="toggleShowHomeDefenseRosterVisibility(data.scoreboard_data!)"
+        ></app-on-air-toggle>
+      </div>
+      <!--      <app-admin-down-button-->
+      <!--        [down]="data.scoreboard_data?.is_team_a_start_defense ? 'Hide' : 'Show'"-->
+      <!--        [distance]="'HOME DEFENSE'"-->
+      <!--        (click)="toggleShowHomeDefenseRosterVisibility(data.scoreboard_data!)"-->
+      <!--      ></app-admin-down-button>-->
     </div>
 
     <div class="roster-forms-btns">
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_team_b_start_defense ? 'Hide' : 'Show'"
-        [distance]="'AWAY DEFENSE'"
-        (click)="toggleShowAwayDefenseRosterVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
+      <div class="toggle-on-air-main">
+        <app-on-air-toggle
+          [isOnAir]="data.scoreboard_data?.is_team_b_start_defense || false"
+          [buttonLabel]="'AWAY DEFENSE'"
+          (toggle)="toggleShowAwayDefenseRosterVisibility(data.scoreboard_data!)"
+        ></app-on-air-toggle>
+      </div>
+      <!--      <app-admin-down-button-->
+      <!--        [down]="data.scoreboard_data?.is_team_b_start_defense ? 'Hide' : 'Show'"-->
+      <!--        [distance]="'AWAY DEFENSE'"-->
+      <!--        (click)="toggleShowAwayDefenseRosterVisibility(data.scoreboard_data!)"-->
+      <!--      ></app-admin-down-button>-->
     </div>
 
     <span class="stats-span">TEAMS STATS</span>
-
     <div class="roster-forms-btns">
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_home_match_team_lower ? 'Hide' : 'Show'"
-        [distance]="'HOME TEAM STATS'"
-        (click)="toggleHomeTeamFootballLowerVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
+      <div class="toggle-on-air-main">
+        <app-on-air-toggle
+          [isOnAir]="data.scoreboard_data?.is_home_match_team_lower || false"
+          [buttonLabel]="'HOME TEAM STATS'"
+          (toggle)="toggleHomeTeamFootballLowerVisibility(data.scoreboard_data!)"
+        ></app-on-air-toggle>
+      </div>
+      <!--      <app-admin-down-button-->
+      <!--        [down]="data.scoreboard_data?.is_home_match_team_lower ? 'Hide' : 'Show'"-->
+      <!--        [distance]="'HOME TEAM STATS'"-->
+      <!--        (click)="toggleHomeTeamFootballLowerVisibility(data.scoreboard_data!)"-->
+      <!--      ></app-admin-down-button>-->
     </div>
 
     <div class="roster-forms-btns">
-      <app-admin-down-button
-        [down]="data.scoreboard_data?.is_away_match_team_lower ? 'Hide' : 'Show'"
-        [distance]="'AWAY TEAM STATS'"
-        (click)="toggleAwayTeamFootballLowerVisibility(data.scoreboard_data!)"
-      ></app-admin-down-button>
+      <div class="toggle-on-air-main">
+        <app-on-air-toggle
+          [isOnAir]="data.scoreboard_data?.is_away_match_team_lower || false"
+          [buttonLabel]="'AWAY TEAM STATS'"
+          (toggle)="toggleAwayTeamFootballLowerVisibility(data.scoreboard_data!)"
+        ></app-on-air-toggle>
+      </div>
+      <!--      <app-admin-down-button-->
+      <!--        [down]="data.scoreboard_data?.is_away_match_team_lower ? 'Hide' : 'Show'"-->
+      <!--        [distance]="'AWAY TEAM STATS'"-->
+      <!--        (click)="toggleAwayTeamFootballLowerVisibility(data.scoreboard_data!)"-->
+      <!--      ></app-admin-down-button>-->
     </div>
 
     <div class="roster-forms-btns" style="grid-column: span 2">
@@ -69,7 +110,6 @@
     </div>
 
     <span class="stats-span">QB FULL STATS</span>
-
     <div class="team-players-select">
       <app-select-qb-with-stats-lower
         [selectedPlayer]="footballQbSelected$ | async"
@@ -86,32 +126,41 @@
       ></app-select-qb-with-stats-lower>
     </div>
 
-    <div
-      class="lower-btn-show"
-      [style.grid-template-columns]="data.scoreboard_data?.is_football_qb_full_stats_lower ? '20% 80%' : '1fr'"
-    >
-      @if (footballQbSelected$ | async; as qb) {
-        @if (data.scoreboard_data?.is_football_qb_full_stats_lower || false) {
-          <div
-            class="on-air"
-            style="padding: 10px; display: grid; justify-content: center; border-radius: 10px"
-            [class]="{'blinking': data.scoreboard_data?.is_football_qb_full_stats_lower}"
-          >ON AIR
-          </div>
-        }
-        <div>
-          <app-admin-down-button
-            [down]="data.scoreboard_data?.is_football_qb_full_stats_lower ? 'HIDE' : 'SHOW'"
-            [distance]="'QB: ' + qb.person?.first_name + ' '+ qb.person?.second_name + ' lower' | uppercase"
-            (click)="toggleFootballQbFullStatsLowerVisibility(data.scoreboard_data!)"
-          ></app-admin-down-button>
-        </div>
-      } @else {
-        <app-admin-down-button
-          [distance]="'SELECT QB LOWER'"
-        ></app-admin-down-button>
-      }
+    <div class="toggle-on-air-main">
+      <app-on-air-toggle
+        [isOnAir]="data.scoreboard_data?.is_football_qb_full_stats_lower || false"
+        [buttonLabel]="getFullName((footballQbSelected$ | async))"
+        [item]="'qb'"
+        (toggle)="toggleFootballQbFullStatsLowerVisibility(data.scoreboard_data!)"
+      ></app-on-air-toggle>
     </div>
+
+    <!--    <div-->
+    <!--      class="lower-btn-show"-->
+    <!--      [style.grid-template-columns]="data.scoreboard_data?.is_football_qb_full_stats_lower ? '20% 80%' : '1fr'"-->
+    <!--    >-->
+    <!--      @if (footballQbSelected$ | async; as qb) {-->
+    <!--        @if (data.scoreboard_data?.is_football_qb_full_stats_lower || false) {-->
+    <!--          <div-->
+    <!--            class="on-air"-->
+    <!--            style="padding: 10px; display: grid; justify-content: center; border-radius: 10px"-->
+    <!--            [class]="{'blinking': data.scoreboard_data?.is_football_qb_full_stats_lower}"-->
+    <!--          >ON AIR-->
+    <!--          </div>-->
+    <!--        }-->
+    <!--        <div>-->
+    <!--          <app-admin-down-button-->
+    <!--            [down]="data.scoreboard_data?.is_football_qb_full_stats_lower ? 'HIDE' : 'SHOW'"-->
+    <!--            [distance]="'QB: ' + qb.person?.first_name + ' '+ qb.person?.second_name + ' lower' | uppercase"-->
+    <!--            (click)="toggleFootballQbFullStatsLowerVisibility(data.scoreboard_data!)"-->
+    <!--          ></app-admin-down-button>-->
+    <!--        </div>-->
+    <!--      } @else {-->
+    <!--        <app-admin-down-button-->
+    <!--          [distance]="'SELECT QB LOWER'"-->
+    <!--        ></app-admin-down-button>-->
+    <!--      }-->
+    <!--    </div>-->
 
 
     <span class="stats-span">SIMPLE PLAYER LOWER</span>
@@ -130,48 +179,41 @@
         [matchPlayers]="(awayPlayersInMatch) || []"
       ></app-select-player-lower>
     </div>
-    <div
-      class="lower-btn-show"
-      [style.grid-template-columns]="data.scoreboard_data?.is_match_player_lower ? '20% 80%' : '1fr'"
-    >
-      @if (playerMatchSelected$ | async; as player) {
-        @if (data.scoreboard_data?.is_match_player_lower) {
-          <div
-            class="on-air"
-            style="padding: 10px; display: grid; justify-content: center; border-radius: 10px"
-            [class]="{'blinking': data.scoreboard_data?.is_match_player_lower}"
-          >ON AIR
-          </div>
-        }
-        <div>
-          <app-admin-down-button
-            [down]="data.scoreboard_data?.is_match_player_lower ? 'HIDE' : 'SHOW'"
-            [distance]="player.person?.first_name + ' '+ player.person?.second_name + ' lower' | uppercase"
-            (click)="toggleShowMatchPlayerLowerVisibility(data.scoreboard_data!)"
-          ></app-admin-down-button>
-        </div>
-      } @else {
-        <app-admin-down-button
-          [distance]="'SELECT PLAYER LOWER'"
-        ></app-admin-down-button>
-      }
+
+    <div class="toggle-on-air-main">
+      <app-on-air-toggle
+        [isOnAir]="data.scoreboard_data?.is_match_player_lower || false"
+        [buttonLabel]="getFullName((playerMatchSelected$ | async))"
+        [item]="'player'"
+        (toggle)="toggleShowMatchPlayerLowerVisibility(data.scoreboard_data!)"
+      ></app-on-air-toggle>
     </div>
 
-
-    <!--    <div class="team-players-select">-->
-    <!--      <app-select-player-lower-->
-    <!--        [selectedPlayer]="playerMatchSelected$ | async"-->
-    <!--        [scoreboardId]="data.scoreboard_data?.id"-->
-    <!--        [matchPlayers]="(homePlayersInMatch$ | async) || []"-->
-    <!--      ></app-select-player-lower>-->
-    <!--    </div>-->
-
-    <!--    <div class="team-players-select">-->
-    <!--      <app-select-player-lower-->
-    <!--        [selectedPlayer]="playerMatchSelected$ | async"-->
-    <!--        [scoreboardId]="data.scoreboard_data?.id"-->
-    <!--        [matchPlayers]="(awayPlayersInMatch$ | async) || []"-->
-    <!--      ></app-select-player-lower>-->
+    <!--    <div-->
+    <!--      class="lower-btn-show"-->
+    <!--      [style.grid-template-columns]="data.scoreboard_data?.is_match_player_lower ? '20% 80%' : '1fr'"-->
+    <!--    >-->
+    <!--      @if (playerMatchSelected$ | async; as player) {-->
+    <!--        @if (data.scoreboard_data?.is_match_player_lower) {-->
+    <!--          <div-->
+    <!--            class="on-air"-->
+    <!--            style="padding: 10px; display: grid; justify-content: center; border-radius: 10px"-->
+    <!--            [class]="{'blinking': data.scoreboard_data?.is_match_player_lower}"-->
+    <!--          >ON AIR-->
+    <!--          </div>-->
+    <!--        }-->
+    <!--        <div>-->
+    <!--          <app-admin-down-button-->
+    <!--            [down]="data.scoreboard_data?.is_match_player_lower ? 'HIDE' : 'SHOW'"-->
+    <!--            [distance]="player.person?.first_name + ' '+ player.person?.second_name + ' lower' | uppercase"-->
+    <!--            (click)="toggleShowMatchPlayerLowerVisibility(data.scoreboard_data!)"-->
+    <!--          ></app-admin-down-button>-->
+    <!--        </div>-->
+    <!--      } @else {-->
+    <!--        <app-admin-down-button-->
+    <!--          [distance]="'SELECT PLAYER LOWER'"-->
+    <!--        ></app-admin-down-button>-->
+    <!--      }-->
     <!--    </div>-->
 
   </div>
