--- a/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.html
@@ -18,11 +18,6 @@
           (toggle)="toggleShowHomeOffenseRosterVisibility(data.scoreboard_data!)"
         ></app-on-air-toggle>
       </div>
-      <!--      <app-admin-down-button-->
-      <!--        [down]="data.scoreboard_data?.is_team_a_start_offense ? 'Hide' : 'Show'"-->
-      <!--        [distance]="'HOME OFFENSE'"-->
-      <!--        (click)="toggleShowHomeOffenseRosterVisibility(data.scoreboard_data!)"-->
-      <!--      ></app-admin-down-button>-->
     </div>
 
     <div class="roster-forms-btns">
@@ -33,11 +28,6 @@
           (toggle)="toggleShowAwayOffenseRosterVisibility(data.scoreboard_data!)"
         ></app-on-air-toggle>
       </div>
-      <!--      <app-admin-down-button-->
-      <!--        [down]="data.scoreboard_data?.is_team_b_start_offense ? 'Hide' : 'Show'"-->
-      <!--        [distance]="'AWAY OFFENSE'"-->
-      <!--        (click)="toggleShowAwayOffenseRosterVisibility(data.scoreboard_data!)"-->
-      <!--      ></app-admin-down-button>-->
     </div>
 
     <div class="roster-forms-btns">
@@ -48,11 +38,6 @@
           (toggle)="toggleShowHomeDefenseRosterVisibility(data.scoreboard_data!)"
         ></app-on-air-toggle>
       </div>
-      <!--      <app-admin-down-button-->
-      <!--        [down]="data.scoreboard_data?.is_team_a_start_defense ? 'Hide' : 'Show'"-->
-      <!--        [distance]="'HOME DEFENSE'"-->
-      <!--        (click)="toggleShowHomeDefenseRosterVisibility(data.scoreboard_data!)"-->
-      <!--      ></app-admin-down-button>-->
     </div>
 
     <div class="roster-forms-btns">
@@ -63,11 +48,6 @@
           (toggle)="toggleShowAwayDefenseRosterVisibility(data.scoreboard_data!)"
         ></app-on-air-toggle>
       </div>
-      <!--      <app-admin-down-button-->
-      <!--        [down]="data.scoreboard_data?.is_team_b_start_defense ? 'Hide' : 'Show'"-->
-      <!--        [distance]="'AWAY DEFENSE'"-->
-      <!--        (click)="toggleShowAwayDefenseRosterVisibility(data.scoreboard_data!)"-->
-      <!--      ></app-admin-down-button>-->
     </div>
 
     <span class="stats-span">TEAMS STATS</span>
@@ -79,11 +59,6 @@
           (toggle)="toggleHomeTeamFootballLowerVisibility(data.scoreboard_data!)"
         ></app-on-air-toggle>
       </div>
-      <!--      <app-admin-down-button-->
-      <!--        [down]="data.scoreboard_data?.is_home_match_team_lower ? 'Hide' : 'Show'"-->
-      <!--        [distance]="'HOME TEAM STATS'"-->
-      <!--        (click)="toggleHomeTeamFootballLowerVisibility(data.scoreboard_data!)"-->
-      <!--      ></app-admin-down-button>-->
     </div>
 
     <div class="roster-forms-btns">
@@ -94,14 +69,9 @@
           (toggle)="toggleAwayTeamFootballLowerVisibility(data.scoreboard_data!)"
         ></app-on-air-toggle>
       </div>
-      <!--      <app-admin-down-button-->
-      <!--        [down]="data.scoreboard_data?.is_away_match_team_lower ? 'Hide' : 'Show'"-->
-      <!--        [distance]="'AWAY TEAM STATS'"-->
-      <!--        (click)="toggleAwayTeamFootballLowerVisibility(data.scoreboard_data!)"-->
-      <!--      ></app-admin-down-button>-->
     </div>
 
-    <div class="roster-forms-btns" style="grid-column: span 2">
+    <div class="roster-forms-btns-span-two">
       <app-admin-down-button
         [down]="'Toggle'"
         [distance]="'BOTH TEAMS STATS'"
@@ -135,34 +105,6 @@
       ></app-on-air-toggle>
     </div>
 
-    <!--    <div-->
-    <!--      class="lower-btn-show"-->
-    <!--      [style.grid-template-columns]="data.scoreboard_data?.is_football_qb_full_stats_lower ? '20% 80%' : '1fr'"-->
-    <!--    >-->
-    <!--      @if (footballQbSelected$ | async; as qb) {-->
-    <!--        @if (data.scoreboard_data?.is_football_qb_full_stats_lower || false) {-->
-    <!--          <div-->
-    <!--            class="on-air"-->
-    <!--            style="padding: 10px; display: grid; justify-content: center; border-radius: 10px"-->
-    <!--            [class]="{'blinking': data.scoreboard_data?.is_football_qb_full_stats_lower}"-->
-    <!--          >ON AIR-->
-    <!--          </div>-->
-    <!--        }-->
-    <!--        <div>-->
-    <!--          <app-admin-down-button-->
-    <!--            [down]="data.scoreboard_data?.is_football_qb_full_stats_lower ? 'HIDE' : 'SHOW'"-->
-    <!--            [distance]="'QB: ' + qb.person?.first_name + ' '+ qb.person?.second_name + ' lower' | uppercase"-->
-    <!--            (click)="toggleFootballQbFullStatsLowerVisibility(data.scoreboard_data!)"-->
-    <!--          ></app-admin-down-button>-->
-    <!--        </div>-->
-    <!--      } @else {-->
-    <!--        <app-admin-down-button-->
-    <!--          [distance]="'SELECT QB LOWER'"-->
-    <!--        ></app-admin-down-button>-->
-    <!--      }-->
-    <!--    </div>-->
-
-
     <span class="stats-span">SIMPLE PLAYER LOWER</span>
     <div class="team-players-select">
       <app-select-player-lower
@@ -188,33 +130,6 @@
         (toggle)="toggleShowMatchPlayerLowerVisibility(data.scoreboard_data!)"
       ></app-on-air-toggle>
     </div>
-
-    <!--    <div-->
-    <!--      class="lower-btn-show"-->
-    <!--      [style.grid-template-columns]="data.scoreboard_data?.is_match_player_lower ? '20% 80%' : '1fr'"-->
-    <!--    >-->
-    <!--      @if (playerMatchSelected$ | async; as player) {-->
-    <!--        @if (data.scoreboard_data?.is_match_player_lower) {-->
-    <!--          <div-->
-    <!--            class="on-air"-->
-    <!--            style="padding: 10px; display: grid; justify-content: center; border-radius: 10px"-->
-    <!--            [class]="{'blinking': data.scoreboard_data?.is_match_player_lower}"-->
-    <!--          >ON AIR-->
-    <!--          </div>-->
-    <!--        }-->
-    <!--        <div>-->
-    <!--          <app-admin-down-button-->
-    <!--            [down]="data.scoreboard_data?.is_match_player_lower ? 'HIDE' : 'SHOW'"-->
-    <!--            [distance]="player.person?.first_name + ' '+ player.person?.second_name + ' lower' | uppercase"-->
-    <!--            (click)="toggleShowMatchPlayerLowerVisibility(data.scoreboard_data!)"-->
-    <!--          ></app-admin-down-button>-->
-    <!--        </div>-->
-    <!--      } @else {-->
-    <!--        <app-admin-down-button-->
-    <!--          [distance]="'SELECT PLAYER LOWER'"-->
-    <!--        ></app-admin-down-button>-->
-    <!--      }-->
-    <!--    </div>-->
 
   </div>
 }
