--- a/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/roster-forms/roster-forms.component.less
@@ -1,6 +1,6 @@
 .roster-forms {
   display: grid;
-  grid-template-rows: auto auto auto auto;
+  //grid-template-rows: auto auto auto auto;
   grid-template-columns: auto auto;
   padding: 10px;
   grid-gap: 10px;
@@ -9,10 +9,18 @@
   justify-content: stretch;
 }
 
+.roster-forms-btns {
+  display: grid;
+}
+
+.roster-forms-btns-span-two {
+  display: grid;
+  grid-column: span 2;
+}
+
 .toggle-on-air-main {
   display: grid;
   grid-template-columns: 100%;
-  //grid-template-columns: 1fr 80%;
   justify-content: center;
   grid-gap: 10px;
   grid-column: span 2;
@@ -28,20 +36,27 @@
   .roster-forms {
     grid-template-columns: auto;
   }
-}
 
-@keyframes blink {
-  0% {
-    background-color: #ffffff; /* or transparent; if you want no color */
-  }
-  50% {
-    background-color: #8f1c1c; /* your blinking color */
-  }
-  100% {
-    background-color: #ffffff; /* or transparent; to restore original color */
+  .stats-span,
+  .toggle-on-air-main,
+  .roster-forms-btns-span-two {
+    grid-column: span 1;
   }
 }
 
-.blinking {
-  animation: blink 2s ease-in-out infinite;
-}
+//
+//@keyframes blink {
+//  0% {
+//    background-color: #ffffff; /* or transparent; if you want no color */
+//  }
+//  50% {
+//    background-color: #8f1c1c; /* your blinking color */
+//  }
+//  100% {
+//    background-color: #ffffff; /* or transparent; to restore original color */
+//  }
+//}
+//
+//.blinking {
+//  animation: blink 2s ease-in-out infinite;
+//}
