football events colored if no player selected

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -15,7 +15,9 @@
               @if (!isExpanded(i)) {
                 @if (getEventTeam(eventsArray, i); as team) {
                   <div
-                    style="display: flex; flex-direction: row; flex-wrap: wrap; padding: 5px">
+                    style="display: flex; flex-direction: row; flex-wrap: wrap; padding: 5px"
+                    [style.background-color]="isResultPlayerSelected(eventsArray, i)"
+                  >
                     <div
                       class="event-table-cell toggle"
                       (click)="toggle(i)"
