football events isPlayers

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -56,11 +56,12 @@
                         {{ playResult | titlecase }}&nbsp;
                       </div>
                     }
-                    <!--                    @if (isScorePlayerSelected(eventsArray, i)) {-->
-                    <!--                    <div class="event-short-view">-->
-                    <!--                      SCORE PLAYER: {{ isPlayer(getEventScorePlayer(eventsArray, i)) }}-->
-                    <!--                    </div>-->
-                    <!--                    }-->
+                    @if (getEventScoreResult(eventsArray, i) === IFootballScoreResult.Td) {
+                      <div class="event-short-view"
+                           [style.background-color]="isMaxCautionColor(noScorePlayerSelected(eventsArray, i))">
+                        SCORE PLAYER: {{ isPlayer(getEventScorePlayer(eventsArray, i)) }}
+                      </div>
+                    }
                     @if (getEventIsFumble(eventsArray, i); as isFumble) {
                       <div
                         class="event-short-view"
